k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-epitrip-website-frontend-deployment
  namespace: staging-epitrip-website-frontend
  labels:
    app: staging-epitrip-website-frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: staging-epitrip-website-frontend
  template:
    metadata:
      labels:
        app: staging-epitrip-website-frontend
    spec:
      containers:
        - name: staging-epitrip-website-frontend
          image: corentin35/epitrip-frontend:staging-${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: '300m'
              memory: '400Mi'
            limits:
              cpu: '600m'
              memory: '800Mi'
      imagePullSecrets:
        - name: regcred
